--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -37,7 +37,11 @@ section {
   box-sizing: border-box;
 }
 body {
-  line-height: 1;
+  min-width: 320px;
+  line-height: 1.5;
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow-x: hidden;
 }
 dl,
 ol,
@@ -62,6 +66,8 @@ table {
 button {
   all: unset;
   cursor: pointer;
+  border: 0;
+  background: transparent;
 }
 textarea {
   resize: none;
@@ -71,7 +77,7 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-  color: inherit;
+  color: var(--black);
   text-decoration: none;
 }
 img {
