--- a/src/components/ui/Input.module.css
+++ b/src/components/ui/Input.module.css
@@ -1,4 +1,5 @@
 .input {
+  width: 100%;
   padding: 1.6rem 1.0rem 1.6rem 2.0rem;
   border: 1px solid var(--gray-400);
   color: var(--font-color);
