fix: 설명  테이블 텍스트 사이즈 수정

--- a/src/pages/sample/components/Sang.module.css
+++ b/src/pages/sample/components/Sang.module.css
@@ -63,7 +63,7 @@
   text-align: left !important;
 }
 
-.description {
+p.description {
   margin-bottom: 20px;
   font-weight: 700;
   color: var(--font-color);
