--- a/src/pages/sample/components/Seung.module.css
+++ b/src/pages/sample/components/Seung.module.css
@@ -27,3 +27,11 @@
   padding: 20px;
   background-color: #fff;
 }
+.btn_ul {
+  display: flex;
+  gap: 10px;
+}
+.btn_ul > li > button {
+  border: 1px solid #000;
+  padding: 10px;
+}
