--- a/src/pages/sample/components/Sol.module.css
+++ b/src/pages/sample/components/Sol.module.css
@@ -17,13 +17,14 @@
 }
 .wrapper > ul > li > h3 {
   font-size: 2rem;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: 700;
 }
 .wrapper > ul > li > h3::before {
   content: counter(number) ". ";
 }
 .wrapper > ul > li > .box {
+  margin-top: 20px;
   padding: 20px;
   background-color: #fff;
 }
