feat: 공용 컴포넌트 CustomRadioInput 제작 완료

--- a/src/pages/sample/components/Sang.module.css
+++ b/src/pages/sample/components/Sang.module.css
@@ -67,3 +67,17 @@ p.description {
   color: var(--font-color);
   font-size: 22px
 }
+
+.radioWrap {
+  display: flex;
+  gap: 0 1.8rem;
+}
+
+@media (max-width: 480px) {
+
+  .radioWrap {
+    flex-direction: column;
+    gap: 1rem 0;
+  }
+
+}
