--- a/src/components/ui/PostCard.module.css
+++ b/src/components/ui/PostCard.module.css
@@ -1,10 +1,13 @@
 .post_box {
   width: 100%;
   height: 100%;
-  padding: 16px;
   border: 1px solid var(--gray-200);
   border-radius: 12px;
   background-color: #fff;
+}
+.post_box > a {
+  display: block;
+  padding: 16px;
 }
 .post_box > a > .thumbnail {
   position: relative;
@@ -101,7 +104,7 @@
 }
 
 @media (max-width: 768px) {
-  .post_box {
+  .post_box > a {
     padding: 12px;
   }
   .post_box > a > .thumbnail .end {
