feat: 공고리스트 맞춤공고, 공고상세 버튼 활성화 수정

--- a/src/pages/view/[shopId]/[noticeId]/view.module.css
+++ b/src/pages/view/[shopId]/[noticeId]/view.module.css
@@ -42,7 +42,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.6);
@@ -50,6 +50,9 @@
   font-size: 2.8rem;
   z-index: 2;
   font-weight: 700;
+}
+.box.end .thumbnail > span {
+  display: flex;
 }
 .box .thumbnail > img {
   width: 100%;
@@ -104,6 +107,9 @@
   line-height: 1.625;
   margin-bottom: 14px;
 }
+.content .txt > p {
+  white-space: pre-line;
+}
 .content > button {
   min-width: auto;
   width: 100%;
@@ -124,6 +130,7 @@
 .description > p {
   font-size: 1.6rem;
   line-height: 1.625;
+  white-space: pre-line;
 }
 .view_recent {
   padding: 60px 0;
