--- a/src/components/ui/CustomRadioInput.module.css
+++ b/src/components/ui/CustomRadioInput.module.css
@@ -1,13 +1,10 @@
 .radioBox {
-
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
-.radioBox .radioInput+label {
-
+.radioBox .radioInput + label {
   position: relative;
   display: flex;
   align-items: center;
@@ -18,11 +15,10 @@
   border: 1px solid var(--gray-400);
   padding: 1.3rem 4.5rem;
   cursor: pointer;
-
 }
 
-.radioBox .radioInput+label::before {
-  content: '';
+.radioBox .radioInput + label::before {
+  content: "";
   flex-shrink: 0;
   width: 2rem;
   height: 2rem;
@@ -30,11 +26,11 @@
   border: 1px solid var(--gray-400);
 }
 
-.radioBox .radioInput:checked+label {
+.radioBox .radioInput:checked + label {
   border: 1px solid var(--primary) !important;
 }
 
-.radioBox .radioInput:checked+label::before {
-  background: var(--primary) url(/check_icon.svg)no-repeat center;
+.radioBox .radioInput:checked + label::before {
+  background: var(--primary) url(/check_icon.svg) no-repeat center;
   border: 0;
 }
