--- a/src/components/ui/Button.module.css
+++ b/src/components/ui/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+  width: 100%;
   display: block;
   border-radius: 0.6rem;
   text-align: center;
@@ -11,18 +12,18 @@
 }
 
 .button_large {
-  min-width: 350px;
+  max-width: 350px;
   padding: 1.4rem 1rem;
 }
 
 .button_medium {
-  min-width: 108px;
+  max-width: 108px;
   padding: 0.9rem 2rem;
   font-size: 1.4rem;
 }
 
 .button_small {
-  min-width: 82px;
+  max-width: 82px;
   padding: 0.8rem 1rem;
   font-size: 1.2rem;
 }
