--- a/src/components/ui/CustomSelect.module.css
+++ b/src/components/ui/CustomSelect.module.css
@@ -90,3 +90,11 @@
   justify-content: center;
   height: 100%;
 }
+
+@media (max-width: 767px) {
+
+  .selectBox .selectBtn {
+    padding: 1.5rem 1.0rem 1.4rem 2.0rem !important;
+  }
+
+}
