--- a/src/components/ui/Input.module.css
+++ b/src/components/ui/Input.module.css
@@ -27,3 +27,14 @@
   line-height: 1.3;
   color: var(--red-400);
 }
+
+@media (max-width: 767px) {
+
+  .input {
+
+    padding: 1.2rem 1.0rem 1.2rem 2.0rem;
+
+  }
+
+
+}
