--- a/src/pages/my-shop/Myshop.module.css
+++ b/src/pages/my-shop/Myshop.module.css
@@ -74,19 +74,23 @@
   flex-shrink: 0;
   width: 539px;
   height: 308px;
-  border-radius: 1.2rem;
   text-transform: uppercase;
   font-weight: 700;
+  background-color: #fdfcfc;
 }
 
 .myshopDetailContainer .detailImgBox img {
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 
 .myshopDetailContainer .detailTextBox {
-  padding: 1.6rem 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1.6rem 0 0;
 }
 
 .myshopDetailContainer .detailTextBox .subText {
@@ -124,6 +128,7 @@
 }
 
 .myshopDetailContainer .detailTextBox .btnBox {
+  margin-top: auto;
   display: flex;
   gap: 0 0.8rem;
 }
@@ -131,6 +136,22 @@
 .myshopDetailContainer .detailTextBox .detailBtn {
   padding: 1.1rem 0.5rem;
   font-size: 1.6rem;
+}
+
+.announcementRegBox {
+  position: relative;
+  padding: 5rem 0;
+}
+
+.announcementRegBox::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  right: -100%;
+  bottom: -100%;
+  background-color: var(--gray-100);
+  z-index: -1;
 }
 
 .bgBox {
