--- a/src/components/ui/CustomSelect.module.css
+++ b/src/components/ui/CustomSelect.module.css
@@ -6,7 +6,7 @@
   position: relative;
   /* min-width: 350px; */
   width: 100%;
-  padding: 1.6rem 1.0rem 1.6rem 2.0rem;
+  padding: 1.8rem 1rem 1.8rem 2rem;
   border: 1px solid var(--gray-400);
   color: var(--font-color);
   border-radius: 0.6rem;
@@ -17,7 +17,7 @@
 }
 
 .selectBox .selectBtn::after {
-  content: '';
+  content: "";
   width: 14px;
   height: 9px;
   position: absolute;
@@ -25,7 +25,7 @@
   right: 21px;
   transform: translateY(-50%);
   background: url(/select_arrow_icon.svg) no-repeat center;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .selectBox .selectBtn.active {
@@ -47,7 +47,7 @@
   border-radius: 6px;
   border: 1px solid var(--gray-300);
   z-index: -99999;
-  transition: all .5s;
+  transition: all 0.5s;
   overflow-y: auto;
   box-shadow: 0 0.4rem 2.5rem rgba(0, 0, 0, 0.1);
 }
@@ -92,9 +92,7 @@
 }
 
 @media (max-width: 767px) {
-
   .selectBox .selectBtn {
-    padding: 1.5rem 1.0rem 1.4rem 2.0rem !important;
+    padding: 1.5rem 1rem 1.4rem 2rem !important;
   }
-
 }
