--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -16,6 +16,7 @@
 
 .main_all {
   padding: 60px 0;
+  min-height: 1000px;
 }
 .right {
   display: flex;
@@ -67,8 +68,20 @@
 .right > div > button {
   font-size: 1.4rem;
   background-color: var(--red-300);
+  max-width: none;
+  width: auto;
 }
-
+.filter {
+  position: relative;
+  z-index: 3;
+}
+.filter > div {
+  position: absolute;
+  top: calc(100% + 8px);
+  right: 0;
+  width: 390px;
+  background-color: #fff;
+}
 .page {
   margin-top: 40px;
 }
@@ -106,5 +119,14 @@
   }
   .page {
     margin-top: 20px;
+  }
+
+  .filter > div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    max-width: none;
+    width: 100%;
+    height: 100dvh;
   }
 }
