--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -62,6 +62,10 @@
   display: inline-block;
 }
 
+.header-alter-box {
+  position: relative;
+}
+
 @media (max-width: 768px) {
   .header-wrapper {
     display: grid;
