맞춤공고 알고리즘 개선, 맞춤공고 반응형 스크롤 대신 2개 노출로 변경

--- a/src/components/ui/EmptyState.module.css
+++ b/src/components/ui/EmptyState.module.css
@@ -7,6 +7,12 @@
   border: 1px solid var(--gray-300);
   border-radius: var(--border-radius-xl);
 }
+.empty-wrapper.white {
+  border-color: var(--white);
+}
+.empty-wrapper.black {
+  border-color: var(--gray-600);
+}
 
 .empty-message {
   margin-bottom: 2.7rem;
