Fix: 오류 코드 수정

--- a/src/components/ui/CustomRadioInput.module.css
+++ b/src/components/ui/CustomRadioInput.module.css
@@ -4,20 +4,21 @@
   justify-content: center;
 }
 
-.radioBox .radioInput + label {
+.radioBox .radioInput+label {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0 0.9rem;
   color: var(--font-color);
   font-size: 1.4rem;
   border-radius: 5rem;
   border: 1px solid var(--gray-400);
-  padding: 1.3rem 4.5rem;
+  padding: 1.3rem 1rem;
   cursor: pointer;
 }
 
-.radioBox .radioInput + label::before {
+.radioBox .radioInput+label::before {
   content: "";
   flex-shrink: 0;
   width: 2rem;
@@ -26,11 +27,11 @@
   border: 1px solid var(--gray-400);
 }
 
-.radioBox .radioInput:checked + label {
+.radioBox .radioInput:checked+label {
   border: 1px solid var(--primary) !important;
 }
 
-.radioBox .radioInput:checked + label::before {
+.radioBox .radioInput:checked+label::before {
   background: var(--primary) url(/check_icon.svg) no-repeat center;
   border: 0;
 }
