--- a/src/components/ui/CustomFileInput.module.css
+++ b/src/components/ui/CustomFileInput.module.css
@@ -74,3 +74,11 @@
 .file_customStyle .noImageText::before {
   background: url(/img_file_edit_icon.svg)no-repeat center !important;
 }
+
+.currentImage {
+  position: absolute;
+  z-index: -1;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
