--- a/src/components/ui/Input.module.css
+++ b/src/components/ui/Input.module.css
@@ -1,3 +1,7 @@
+.inputBox {
+  position: relative;
+}
+
 .input {
   width: 100%;
   padding: 1.6rem 1.0rem 1.6rem 2.0rem;
@@ -36,5 +40,11 @@
 
   }
 
+}
 
+.subText {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 2.0rem;
 }
