--- a/src/pages/my-shop/Myshop.module.css
+++ b/src/pages/my-shop/Myshop.module.css
@@ -12,12 +12,14 @@
 }
 
 .myshopForm .inputContainer {
+  position: relative;
   display: flex;
   gap: 0 2.0rem;
 }
 
 .myshopForm .inputContainer .box {
-  width: 50%;
+  position: relative;
+  width: calc(50% - 10px);
   margin-bottom: 2.4rem;
 }
 
@@ -147,6 +149,7 @@
 .myshopDetailContainer .detailTextBox .detailBtn {
   padding: 1.1rem 0.5rem;
   font-size: 1.6rem;
+  max-width: none;
 }
 
 .announcementRegBox {
@@ -195,7 +198,7 @@
   }
 
   .myshopDetailContainer .detailTextBox .detailTatle {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
 }
@@ -223,4 +226,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9;
+}
+
+.myshopEditContainer .fileInputBox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  right: 0;
+  bottom: 0;
+  z-index: 99;
 }
